<resources>
    <string name="app_name">BG.Rebooter</string>
    <string name="action_sign_in">Grand Permission</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reboot">Reboot</string>
    <string name="dialog_ok">OK</string>
    <string name="clean_auth">REMOVE AUTH KEY</string>
    <string name="test_button">TEST BUTTON</string>
    <string name="hosts_groupe">Hosts groupe</string>
    <string name="triggers">Triggers</string>
    <string name="test">Test</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
