<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/show_hosts_group"
            android:icon="@drawable/ic_hosts_groupe"
            android:title="@string/hosts_groupe"
            android:alphabeticShortcut="show_hosts_group"
            />
        <item
            android:id="@+id/show_triggers"
            android:icon="@drawable/ic_triggers"
            android:title="@string/triggers"
            android:numericShortcut="show_triggers"
            />
        <item
            android:id="@+id/show_test"
            android:icon="@drawable/ic_test"
            android:title="@string/test"
            android:numericShortcut="show_test"


            />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/group_menu2">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:numericShortcut="logout"

            />
    </group>
</menu>